Set bunch of flags to try to combat GC Overhead exceeded exception